--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/animate.min.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/main.css">
 
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
 </head>
 
@@ -98,27 +100,87 @@
             </div>
         </section>
 
+        <!-- 메인비주얼 끝 -->
+
 
         <section class="main_content">
-            <h2 class="title">테마전시안내</h2>
-            <div class="content_slide swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide box box01">
+            <div class="content_wrap inner">
+                <h2 class="title">테마전시안내</h2>
+
+                <div class="container">
+                    <ul class="tabs">
+                        <li class="tab-link current" data-tab="tab-1">그 시절 추억의 테마 전시</li>
+                        <li class="tab-link" data-tab="tab-2">다양한 전통문화 체험</li>
+                    </ul>
+                    <div id="tab-1" class="tab-content current">
+                        <div class="content_slide">
+                            <figure>
+                                <img src="./images/theme01_s.jpg" alt="">
+                                <h3>서울역과 지도관</h3>
+                                <p>추억의 서울역과 분단된 우리나라의 아픔</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/theme02_s.jpg" alt="">
+                                <h3>추억의 영화마을</h3>
+                                <p>찰칵! 차르르- 정겨운 필름 돌아가는 소리</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/theme03_s.jpg" alt="">
+                                <h3>가요콩쿨무대장</h3>
+                                <p>오늘은 나도 가수다? 추억의 노래자랑!</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/theme04_s.jpg" alt="">
+                                <h3>추억의 거리</h3>
+                                <p>나 어릴 적 추억이 모두 이곳에...</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/theme05_s.jpg" alt="">
+                                <h3>달동네 마을</h3>
+                                <p>가슴 뭉클했던 50~80년대의 달동네의 모습</p>
+                            </figure>
+                        </div>
                     </div>
-                    <div class="swiper-slide box box01">
+                    <div id="tab-2" class="tab-content">
+                        <div class="event_slide">
+                            <figure>
+                                <img src="./images/exp05_1.jpg" alt="">
+                                <h3>옛날 교복체험</h3>
+                                <p>옛 교복을 입고 사진을 찍어보세요!</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/exp02_1.jpg" alt="">
+                                <h3>민속놀이 마당</h3>
+                                <p>굴렁쇠, 팽이, 고무줄놀이, 그네타기 등 모든 놀이를 한 곳에 모아 체험할 수 있게 하였습니다.</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/exp03_1.jpg" alt="">
+                                <h3>작은 동물원</h3>
+                                <p>꿩, 토끼, 닭 등 작은 동물이 있는 작은 동물원, 어린이들의 체험교육!</p>
+                            </figure>
+                            <figure>
+                                <img src="./images/exp04_1.jpg" alt="">
+                                <h3>공포의 집</h3>
+                                <p>무시무시한 도깨비가 가득! <br /> 보기만 해도 소름이 돋는 도깨비관에서 이색체험을 해 보세요.</p>
+                            </figure>
+
+                        </div>
                     </div>
-                    <div class="swiper-slide box box01">
-                    </div>
-                    <div class="swiper-slide box box01">
-                    </div>
-                    <div class="swiper-slide box box01">
-                    </div>
+                </div>
+
+                <div class="arrows">
+                    <i class="xi-arrow-left left"></i>
+                    <i class="xi-arrow-right right"></i>
                 </div>
             </div>
         </section>
 
+        <!-- 탭 매뉴 끝 -->
 
 
+        <section class="main_map">
+            ddd
+        </section>
 
     </main>
 
