--- a/index.html
+++ b/index.html
@@ -94,18 +94,86 @@
 
             <div class="btn_cicle">
                 <a href="" class="case">
-                    <span>810</span>
                     <p>관광지<br /> 순환버스 안내</p>
+                    <span>810</span>
                 </a>
             </div>
         </section>
 
         <!-- 메인비주얼 끝 -->
 
+        <section class="main_map _se_">
+            </div>
+            <div class="map inner">
+                <div class="left_img">
+                    <div class="img_box">
+                        <img src="./images/intro_img2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="left">
+                    <h3>여러분!
+                        선녀와나무꾼 테마공원으로 오십시오.</h3>
+                    <p>
+                        단 하루라도 그리운 추억속으로 돌아가 우리 옛 이야기를 하면서 <br />
+                        구수한 숭늉 한 대접에 따뜻한 마음을 담아보세요.<br />
+
+                        우천시에도 관람이 가능하며 온 종일 쉬어 갈 수 있는<br />
+                        고향 같은 테마공원입니다.</p>
+                    <a href="">원장 김상분</a>
+                </div>
+
+                <div class="right">
+                    <h3>관람안내</h3>
+                    <div class="desc">
+                        <i class="bi bi-telephone-outbound"></i>
+                        <a href="tel:044-999-6393" class="tel">044-999-6393</a>
+                        <a href="" class="btn2">관람 문의하기</a>
+                    </div>
+                    <ul class="list_dot list">
+                        <li>
+                            <strong>관람시간</strong>
+                            <p>09:00 ~ 18:30(입장마감 17:30) <br />
+                                동,하절기 탄력적용 운영하며 당일 상황 및 기상에 따라 입장마감시간이 변경 될 수 있으므로 사전연락바랍니다.
+                            </p>
+                        </li>
+                        <li>
+                            <strong>이용요금</strong>
+                            <p>성인 13,000원<br>
+                                청소년 11,000원<br>
+                                어린이 10,000원<br>
+                                <a href="">자세히 보기</a>
+                            </p>
+                        </li>
+                        <li>
+                            <strong class="ls2">위치</strong>
+                            <p>설명설명설명</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="right_img">
+                    <div class="img_box">
+                        <img src="./images/intro_img3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 전통문양넣기 -->
+        <!-- 중간메뉴 -->
+
+        <section class="main_banner sec">
+            <div class="title">
+                <h2>"나 어릴 적 그리운 추억들이 모두 다 여기에 있네..."</h2>
+                <p>선녀와 나무꾼은 여러분이 쉴 수 있는 마음의 고향입니다.
+                    나 어릴 적 그 시절을 만들면서 가슴이 뛰었고, 눈물이 글썽하였습니다.
+                    그리운 얼굴이 생각날 때, 고향이 그리울 때...
+                </p>
+            </div>
+        </section>
 
         <section class="main_content">
             <div class="content_wrap inner">
-                <h2 class="title">테마전시안내</h2>
+                <h2 class="title">테마전시 및 체험안내</h2>
 
                 <div class="container">
                     <ul class="tabs">
@@ -178,9 +246,7 @@
         <!-- 탭 매뉴 끝 -->
 
 
-        <section class="main_map">
-            ddd
-        </section>
+
 
     </main>
 
