--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="header_wrap inner">
             <h1 class="logo">
-                <img src="./images/gnb_title.png" alt="선녀와 남욱군">
+                <a href=""><img src="./images/gnb_title.png" alt="선녀와 남욱군"></a>
             </h1>
 
             <nav class="gnb">
@@ -59,6 +59,8 @@
             </div>
         </div>
     </header>
+
+    <!-- 헤더 끝 -->
 
     <main>
         <section class="main_visual">
@@ -103,14 +105,8 @@
         <!-- 메인비주얼 끝 -->
 
         <section class="main_map _se_">
-            </div>
             <div class="map inner">
-                <div class="left_img">
-                    <div class="img_box">
-                        <img src="./images/intro_img2.jpg" alt="">
-                    </div>
-                </div>
-                <div class="left">
+                <div class="top">
                     <h3>여러분!
                         선녀와나무꾼 테마공원으로 오십시오.</h3>
                     <p>
@@ -121,8 +117,22 @@
                         고향 같은 테마공원입니다.</p>
                     <a href="">원장 김상분</a>
                 </div>
+                <div class="top_img">
+                    <div class="img_box">
+                        <img src="./images/intro_img2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                <div class="right">
+        <section class="main_map02 _se_">
+            <div class="map inner">
+                <div class="bottom_img">
+                    <div class="img_box">
+                        <img src="./images/intro_img3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="bottom">
                     <h3>관람안내</h3>
                     <div class="desc">
                         <i class="bi bi-telephone-outbound"></i>
@@ -150,11 +160,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="right_img">
-                    <div class="img_box">
-                        <img src="./images/intro_img3.jpg" alt="">
-                    </div>
-                </div>
+            </div>
             </div>
         </section>
 
@@ -171,77 +177,121 @@
             </div>
         </section>
 
+        <!-- 메인배너 끝 -->
+
+
         <section class="main_content">
             <div class="content_wrap inner">
-                <h2 class="title">테마전시 및 체험안내</h2>
-
-                <div class="container">
-                    <ul class="tabs">
-                        <li class="tab-link current" data-tab="tab-1">그 시절 추억의 테마 전시</li>
-                        <li class="tab-link" data-tab="tab-2">다양한 전통문화 체험</li>
-                    </ul>
-                    <div id="tab-1" class="tab-content current">
-                        <div class="content_slide">
-                            <figure>
-                                <img src="./images/theme01_s.jpg" alt="">
-                                <h3>서울역과 지도관</h3>
-                                <p>추억의 서울역과 분단된 우리나라의 아픔</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/theme02_s.jpg" alt="">
-                                <h3>추억의 영화마을</h3>
-                                <p>찰칵! 차르르- 정겨운 필름 돌아가는 소리</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/theme03_s.jpg" alt="">
-                                <h3>가요콩쿨무대장</h3>
-                                <p>오늘은 나도 가수다? 추억의 노래자랑!</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/theme04_s.jpg" alt="">
-                                <h3>추억의 거리</h3>
-                                <p>나 어릴 적 추억이 모두 이곳에...</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/theme05_s.jpg" alt="">
-                                <h3>달동네 마을</h3>
-                                <p>가슴 뭉클했던 50~80년대의 달동네의 모습</p>
-                            </figure>
-                        </div>
-                    </div>
-                    <div id="tab-2" class="tab-content">
-                        <div class="event_slide">
-                            <figure>
-                                <img src="./images/exp05_1.jpg" alt="">
-                                <h3>옛날 교복체험</h3>
-                                <p>옛 교복을 입고 사진을 찍어보세요!</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/exp02_1.jpg" alt="">
-                                <h3>민속놀이 마당</h3>
-                                <p>굴렁쇠, 팽이, 고무줄놀이, 그네타기 등 모든 놀이를 한 곳에 모아 체험할 수 있게 하였습니다.</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/exp03_1.jpg" alt="">
-                                <h3>작은 동물원</h3>
-                                <p>꿩, 토끼, 닭 등 작은 동물이 있는 작은 동물원, 어린이들의 체험교육!</p>
-                            </figure>
-                            <figure>
-                                <img src="./images/exp04_1.jpg" alt="">
-                                <h3>공포의 집</h3>
-                                <p>무시무시한 도깨비가 가득! <br /> 보기만 해도 소름이 돋는 도깨비관에서 이색체험을 해 보세요.</p>
-                            </figure>
-
-                        </div>
+                <div class="title">
+                    <h2>그 시절 추억의 테마 전시</h2>
+                    <div class="arrows">
+                        <i class="xi-angle-left-min left"></i>
+                        <i class="xi-angle-right-min right"></i>
                     </div>
                 </div>
 
-                <div class="arrows">
-                    <i class="xi-arrow-left left"></i>
-                    <i class="xi-arrow-right right"></i>
+
+                <div class="content_slide">
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme01_1.jpg" alt="">
+                            <h3>서울역과 지도관</h3>
+                            <p>추억의 서울역과 분단된 우리나라의 아픔</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme02_1.jpg" alt="">
+                            <h3>추억의 영화마을</h3>
+                            <p>찰칵! 차르르- 정겨운 필름 돌아가는 소리</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme03_1.jpg" alt="">
+                            <h3>가요콩쿨무대장</h3>
+                            <p>오늘은 나도 가수다? 추억의 노래자랑!</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme04_1.jpg" alt="">
+                            <h3>추억의 거리</h3>
+                            <p>나 어릴 적 추억이 모두 이곳에...</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme05_1.jpg" alt="">
+                            <h3>달동네 마을</h3>
+                            <p>가슴 뭉클했던 50~80년대의 달동네의 모습</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme07_1.jpg" alt="">
+                            <h3>도심의 상가거리</h3>
+                            <p>추억의 고고장, 만화방 웃음이 끊이지 않던 추억</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme08_1.jpg" alt="">
+                            <h3>어부들의 생활관</h3>
+                            <p>옛 어민들의 생활을 볼 수 있는 곳</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme09_1.jpg" alt="">
+                            <h3>인쇄소 전시관</h3>
+                            <p>최초 활자판과 인쇄기계를 볼 수 있는 곳</p>
+                        </a>
+                    </figure>
+                    <figure>
+                        <a href="">
+                            <img src="./images/theme10_2.jpg" alt="">
+                            <h3>추억의 학교</h3>
+                            <p>직접 교복을 입고 사진도 찍을 수 있는 곳</p>
+                        </a>
+                    </figure>
+
+
                 </div>
             </div>
         </section>
+
+        <section class="main_event">
+            <div class="event_wrap inner">
+                <div class="title">
+                    <h2>다양한 전통문화 체험</h2>
+                </div>
+                <div class="event_slide">
+                    <figure>
+                        <img src="./images/exp05_1.jpg" alt="">
+                        <h3>옛날 교복체험</h3>
+                        <p>옛 교복을 입고 사진을 찍어보세요!</p>
+                    </figure>
+                    <figure>
+                        <img src="./images/exp02_1.jpg" alt="">
+                        <h3>민속놀이 마당</h3>
+                        <p>굴렁쇠, 팽이, 고무줄놀이, 그네타기 등 모든 놀이를 한 곳에 모아 체험할 수 있게 하였습니다.</p>
+                    </figure>
+                    <figure>
+                        <img src="./images/exp03_1.jpg" alt="">
+                        <h3>작은 동물원</h3>
+                        <p>꿩, 토끼, 닭 등 작은 동물이 있는 작은 동물원, 어린이들의 체험교육!</p>
+                    </figure>
+                    <figure>
+                        <img src="./images/exp04_1.jpg" alt="">
+                        <h3>공포의 집</h3>
+                        <p>무시무시한 도깨비가 가득! <br /> 보기만 해도 소름이 돋는 도깨비관에서 이색체험을 해 보세요.</p>
+                    </figure>
+                </div>
+            </div>
+            </div>
+        </section>
+        </div>
 
         <!-- 탭 매뉴 끝 -->
 
