--- a/index.html
+++ b/index.html
@@ -180,85 +180,108 @@
         <!-- 메인배너 끝 -->
 
 
-        <section class="main_content">
+        <section class="main_content _se_">
             <div class="content_wrap inner">
                 <div class="title">
                     <h2>그 시절 추억의 테마 전시</h2>
-                    <div class="arrows">
-                        <i class="xi-angle-left-min left"></i>
-                        <i class="xi-angle-right-min right"></i>
-                    </div>
-                </div>
-
-
-                <div class="content_slide">
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme01_1.jpg" alt="">
-                            <h3>서울역과 지도관</h3>
-                            <p>추억의 서울역과 분단된 우리나라의 아픔</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme02_1.jpg" alt="">
-                            <h3>추억의 영화마을</h3>
-                            <p>찰칵! 차르르- 정겨운 필름 돌아가는 소리</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme03_1.jpg" alt="">
-                            <h3>가요콩쿨무대장</h3>
-                            <p>오늘은 나도 가수다? 추억의 노래자랑!</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme04_1.jpg" alt="">
-                            <h3>추억의 거리</h3>
-                            <p>나 어릴 적 추억이 모두 이곳에...</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme05_1.jpg" alt="">
-                            <h3>달동네 마을</h3>
-                            <p>가슴 뭉클했던 50~80년대의 달동네의 모습</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme07_1.jpg" alt="">
-                            <h3>도심의 상가거리</h3>
-                            <p>추억의 고고장, 만화방 웃음이 끊이지 않던 추억</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme08_1.jpg" alt="">
-                            <h3>어부들의 생활관</h3>
-                            <p>옛 어민들의 생활을 볼 수 있는 곳</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme09_1.jpg" alt="">
-                            <h3>인쇄소 전시관</h3>
-                            <p>최초 활자판과 인쇄기계를 볼 수 있는 곳</p>
-                        </a>
-                    </figure>
-                    <figure>
-                        <a href="">
-                            <img src="./images/theme10_2.jpg" alt="">
-                            <h3>추억의 학교</h3>
-                            <p>직접 교복을 입고 사진도 찍을 수 있는 곳</p>
-                        </a>
-                    </figure>
-
-
                 </div>
             </div>
+            <div class="arrows">
+                <i class="xi-angle-left-min left"></i>
+                <i class="xi-angle-right-min right"></i>
+            </div>
+            <div class="content_slide">
+                <figure>
+                    <a href="">
+                        <img src="./images/theme01_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>서울역과 지도관</h3>
+                            <p>추억의 서울역과 분단된 우리나라의 아픔</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme02_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>추억의 영화마을</h3>
+                            <p>찰칵! 차르르- 정겨운 필름 돌아가는 소리</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme03_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>가요콩쿨무대장</h3>
+                            <p>오늘은 나도 가수다? 추억의 노래자랑!</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme04_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>추억의 거리</h3>
+                            <p>나 어릴 적 추억이 모두 이곳에...</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme05_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>달동네 마을</h3>
+                            <p>가슴 뭉클했던 50~80년대의 달동네의 모습</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme07_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>도심의 상가거리</h3>
+                            <p>추억의 고고장, 만화방 웃음이 끊이지 않던 추억</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme08_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>어부들의 생활관</h3>
+                            <p>옛 어민들의 생활을 볼 수 있는 곳</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme09_1.jpg" alt="">
+                        <div class="txt">
+                            <h3>인쇄소 전시관</h3>
+                            <p>최초 활자판과 인쇄기계를 볼 수 있는 곳</p>
+                        </div>
+                    </a>
+                </figure>
+                <figure>
+                    <a href="">
+                        <img src="./images/theme10_2.jpg" alt="">
+                        <div class="txt">
+                            <h3>추억의 학교</h3>
+                            <p>직접 교복을 입고 사진도 찍을 수 있는 곳</p>
+                        </div>
+                    </a>
+                </figure>
+            </div>
+
+            <div class="btn">
+                <a href="">
+                    <div class="round_btn">더 많은 전시 보러가기
+                        <i class="xi-arrow-right"></i>
+                    </div>
+                </a>
+            </div>
+
         </section>
 
         <section class="main_event">
@@ -266,26 +289,62 @@
                 <div class="title">
                     <h2>다양한 전통문화 체험</h2>
                 </div>
-                <div class="event_slide">
+                <div class="event_img">
                     <figure>
-                        <img src="./images/exp05_1.jpg" alt="">
-                        <h3>옛날 교복체험</h3>
-                        <p>옛 교복을 입고 사진을 찍어보세요!</p>
+                        <a href="">
+                            <div class="img_box"><img src="./images/exp05_1.jpg" alt=""></div>
+                            <div class="txt">
+                                <strong>옛날 교복체험</strong>
+                                <p>옛 교복을 입고 사진을 찍어보세요!</p>
+                                <a href="/">
+                                    <i class="xi-plus">자세히보기</i>
+                                </a>
+                            </div>
+                        </a>
                     </figure>
                     <figure>
-                        <img src="./images/exp02_1.jpg" alt="">
-                        <h3>민속놀이 마당</h3>
-                        <p>굴렁쇠, 팽이, 고무줄놀이, 그네타기 등 모든 놀이를 한 곳에 모아 체험할 수 있게 하였습니다.</p>
+                        <a href="">
+                            <div class="img_box">
+                                <img src="./images/exp02_1.jpg" alt="">
+                            </div>
+
+                            <div class="txt">
+                                <strong>민속놀이 마당</strong>
+                                <p>굴렁쇠, 팽이, 고무줄놀이, 그네타기 등 모든 놀이를 한 곳에 모아 체험할 수 있게 하였습니다.</p>
+                                <a href="/">
+                                    <i class="xi-plus">자세히보기</i></a>
+                            </div>
+                        </a>
                     </figure>
                     <figure>
-                        <img src="./images/exp03_1.jpg" alt="">
-                        <h3>작은 동물원</h3>
-                        <p>꿩, 토끼, 닭 등 작은 동물이 있는 작은 동물원, 어린이들의 체험교육!</p>
+                        <a href="">
+                            <div class="img_box">
+                                <img src="./images/exp03_1.jpg" alt="">
+                            </div>
+
+                            <div class="txt">
+                                <strong>작은 동물원</strong>
+                                <p>꿩, 토끼, 닭 등 작은 동물이 있는 작은 동물원, 어린이들의 체험교육!</p>
+                                <a href="/">
+                                    <i class="xi-plus">자세히보기</i>
+                                </a>
+                            </div>
+                        </a>
                     </figure>
                     <figure>
-                        <img src="./images/exp04_1.jpg" alt="">
-                        <h3>공포의 집</h3>
-                        <p>무시무시한 도깨비가 가득! <br /> 보기만 해도 소름이 돋는 도깨비관에서 이색체험을 해 보세요.</p>
+                        <a href="">
+                            <div class="img_box">
+                                <img src="./images/exp04_1.jpg" alt="">
+                            </div>
+
+                            <div class="txt">
+                                <strong>공포의 집</strong>
+                                <p>무시무시한 도깨비가 가득! <br /> 보기만 해도 소름이 돋는 도깨비관에서 이색체험을 해 보세요.</p>
+                                <a href="/">
+                                    <i class="xi-plus">자세히보기</i>
+                                </a>
+                            </div>
+                        </a>
                     </figure>
                 </div>
             </div>
