--- a/Total.html
+++ b/Total.html
@@ -87,7 +87,7 @@
                             <strong class="new">선녀와나무꾼♥ 마라도 가는 여객선 제휴 이벤트</strong>
                             <span>2023.01.19</span>
                             <div class="cate">
-                                NEWS <i class="xi-plus"></i>
+                                <i class="xi-plus"></i>
                             </div>
                         </a>
                     </li>
@@ -96,7 +96,7 @@
                             <strong>홈페이지가 새롭게 오픈하였습니다.</strong>
                             <span>2023.06.30</span>
                             <div class="cate">
-                                NEWS <i class="xi-plus"></i>
+                                <i class="xi-plus"></i>
                             </div>
                         </a>
                     </li>
@@ -105,7 +105,7 @@
                             <strong>2020년 요금인상 안내</strong>
                             <span>2020.01.01</span>
                             <div class="cate">
-                                NEWS <i class="xi-plus"></i>
+                                <i class="xi-plus"></i>
                             </div>
                         </a>
                     </li>
@@ -114,14 +114,33 @@
         </section>
     </main>
 
+
     <footer class="footer">
-        <ul>
-            <li>제주특별자치도 제주시 조천읍 선흘리 1997</li>
-            <li><a href="">TEL. 064-784-9001</a></li>
-            <li><a href="">FAX. 064-784-9004</a></li>
-            <li>사업자등록번호 301-46-01574</li>
-        </ul>
-        <div class="copyright">&copy;Copyright 2017. 선녀와나무꾼 All Rights Reserved.</div>
+        <div class="ft_wrap inner">
+            <div class="ft_img">
+                <a href=""><img src="./images/title.png" alt=""></a>
+            </div>
+            <div class="ft_txt">
+                <ul class="basic">
+                    <li><a href=""><strong>개인정보처리방침</strong></a></li>
+                    <li><a href="">이용약관</a></li>
+                    <li><a href="">저작권정책</a></li>
+                    <li><a href="">누리집지도</a></li>
+                </ul>
+                <ul>
+                    <li>제주특별자치도 제주시 조천읍 선흘리 1997</li>
+                    <li><a href="">TEL. 064-784-9001</a></li>
+                    <li><a href="">FAX. 064-784-9004</a></li>
+                    <li>사업자등록번호 301-46-01574</li>
+                </ul>
+                <div class="copyright">&copy;Copyright 2017. 선녀와나무꾼 All Rights Reserved.</div>
+            </div>
+            <div class="ft_link">
+                <a href=""><i class="xi-facebook"></i></a>
+                <a href=""><i class="xi-instagram"></i></a>
+                <a href=""><i class="xi-youtube-play"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 
