--- a/Total.html
+++ b/Total.html
@@ -23,7 +23,7 @@
     <header class="header">
         <div class="header_wrap inner">
             <h1 class="logo">
-                <a href=""><img src="./images/gnb_title.png" alt="선녀와 남욱군"></a>
+                <a href="./index.html"><img src="./images/gnb_title.png" alt="선녀와 남욱군"></a>
             </h1>
 
             <nav class="gnb">
