--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="description" content="제주도 제주시 조천읍 위치. 어릴 적 그 시절 고향 같은 테마공원 .">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="선녀와 나무꾼">
+    <meta property="og:url" content="https://ssuunnwwoooo.github.io/namu/">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://ssuunnwwoooo.github.io/namu/images/theme01_1.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="선녀와 나무꾼">
+    <meta name="twitter:description" content="선녀와나무꾼, 제주여행, 제주가볼만한곳, 제주 동부, 제주선녀와나무꾼, 체험관, 생활관, 전시관, 박물관, 어린시절, 옛추억">
+    <meta name="twitter:url" content="https://ssuunnwwoooo.github.io/namu/">
+    <meta name="twitter:image" content="https://ssuunnwwoooo.github.io/namu/images/theme01_1.jpg">
+    <meta http-equiv="imagetoolbar" content="no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>선녀와 나무꾼</title>
+    <link rel="icon" href="./images/sim.png">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/animate.min.css">
@@ -23,7 +38,7 @@
     <header class="header">
         <div class="header_wrap inner">
             <h1 class="logo">
-                <a href=""><img src="./images/gnb_title.png" alt="선녀와 남욱군"></a>
+                <a href=""><img src="./images/gnb_title.png" alt="선녀와 나무꾼"></a>
             </h1>
 
             <nav class="gnb">
