--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <nav class="gnb">
                 <ul class="main_menu">
-                    <li><a href="/">선녀와 나무꾼</a>
+                    <li id="gnb_c"><a href="/">선녀와 나무꾼</a>
                         <ul class="sub">
                             <li><a href="/">인사말</a></li>
                             <li><a href="/">찾아오시는길</a></li>
@@ -51,13 +51,13 @@
                     </li>
                     <li><a href="/">테마전시안내</a></li>
                     <li><a href="/">체험안내</a></li>
-                    <li><a href="/">이용안내</a>
+                    <li id="gnb_c"><a href="/">이용안내</a>
                         <ul class="sub">
                             <li><a href="/">관람 및 요금안내</a></li>
                             <li><a href="/">편의시설</a></li>
                         </ul>
                     </li>
-                    <li><a href="/">커뮤니티</a>
+                    <li id="gnb_c"><a href="/">커뮤니티</a>
                         <ul class="sub">
                             <li><a href="./Total.html">공지사항 &amp; 이벤트</a></li>
                             <li><a href="/">질문과 답변</a></li>
@@ -74,7 +74,9 @@
             </div>
         </div>
     </header>
-
+    <div class="mobile_btn">
+        <i class="xi-bars"></i>
+    </div>
     <!-- 헤더 끝 -->
 
     <main>
