--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                     <h3>여러분!
                         선녀와나무꾼 테마공원으로 오십시오.</h3>
                     <p>
-                        단 하루라도 그리운 추억속으로 돌아가 우리 옛 이야기를 하면서 <br />
+                        단 하루라도 그리운 추억속으로 돌아가 우리 옛 이야기를 하면서
                         구수한 숭늉 한 대접에 따뜻한 마음을 담아보세요.<br />
 
-                        우천시에도 관람이 가능하며 온 종일 쉬어 갈 수 있는<br />
+                        우천시에도 관람이 가능하며 온 종일 쉬어 갈 수 있는
                         고향 같은 테마공원입니다.</p>
                     <a href="">원장 김상분</a>
                 </div>
